--- a/shifty-sands/README
+++ b/shifty-sands/README
@@ -1,1 +1,9 @@
-New Project
+Clone Repository. This repo may holds multiple independent projects.
+
+Change directory into your chosen project:
+
+<code>cd {project-name}</code>
+
+Run **env_setup** with python:
+
+<code> python env_setup.py </code>
