finalised validations, added coverage extraction methods

--- a/shifty-sands/notebooks/scheduels_generation_notebook.ipynb
+++ b/shifty-sands/notebooks/scheduels_generation_notebook.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -670,312 +670,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "293\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pattern_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>p4_m3_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>p2_a1_a1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>p0_a3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>p15_m2_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>p10_a2_a3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>p12_m3_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>p14_m3_m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>p4_a2_a1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>p11_m3_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>p1_a1_a2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>p10_m1_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>p4_a2_a3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>p15_m1_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>p8_m2_m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>p10_a2_a1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>p15_m2_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>p9_a3_a3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>p15_m3_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>p7_a1_a1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>p10_m1_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>p13_m1_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>p0_m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>p11_m2_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>p2_m3_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>p14_m2_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>p4_m2_m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>p12_m1_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>p3_m1_m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>p8_a2_a3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>p15_a3_a3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>p13_a1_a1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>p15_a3_a2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>p9_m2_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>p14_n_n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>p12_a2_a3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>p2_m1_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>p9_m1_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>p13_a1_a2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>p11_m1_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>p10_m3_m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>p6_a1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>p2_a3_a2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>p8_m3_m1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>p15_a1_a2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>p13_m1_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>p15_m2_m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>p4_m3_m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>p4_a1_a1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>p8_m3_m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>p3_m3_m3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   pattern_id\n",
-       "0    p4_m3_m2\n",
-       "1    p2_a1_a1\n",
-       "2       p0_a3\n",
-       "3   p15_m2_m2\n",
-       "4   p10_a2_a3\n",
-       "5   p12_m3_m2\n",
-       "6   p14_m3_m3\n",
-       "7    p4_a2_a1\n",
-       "8   p11_m3_m1\n",
-       "9    p1_a1_a2\n",
-       "10  p10_m1_m2\n",
-       "11   p4_a2_a3\n",
-       "12  p15_m1_m2\n",
-       "13   p8_m2_m3\n",
-       "14  p10_a2_a1\n",
-       "15  p15_m2_m2\n",
-       "16   p9_a3_a3\n",
-       "17  p15_m3_m1\n",
-       "18   p7_a1_a1\n",
-       "19  p10_m1_m1\n",
-       "20  p13_m1_m1\n",
-       "21      p0_m3\n",
-       "22  p11_m2_m1\n",
-       "23   p2_m3_m2\n",
-       "24  p14_m2_m2\n",
-       "25   p4_m2_m3\n",
-       "26  p12_m1_m2\n",
-       "27   p3_m1_m3\n",
-       "28   p8_a2_a3\n",
-       "29  p15_a3_a3\n",
-       "30  p13_a1_a1\n",
-       "31  p15_a3_a2\n",
-       "32   p9_m2_m1\n",
-       "33    p14_n_n\n",
-       "34  p12_a2_a3\n",
-       "35   p2_m1_m1\n",
-       "36   p9_m1_m1\n",
-       "37  p13_a1_a2\n",
-       "38  p11_m1_m1\n",
-       "39  p10_m3_m3\n",
-       "40      p6_a1\n",
-       "41   p2_a3_a2\n",
-       "42   p8_m3_m1\n",
-       "43  p15_a1_a2\n",
-       "44  p13_m1_m2\n",
-       "45  p15_m2_m3\n",
-       "46   p4_m3_m3\n",
-       "47   p4_a1_a1\n",
-       "48   p8_m3_m2\n",
-       "49   p3_m3_m3"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "import pandas as pd\n",
+    "Develop `_calculate_schedules_residuals`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from conftest import TestObjects\n",
+    "from src.generators.schedules_generator import (\n",
+    "    SchedulesGenerator,\n",
+    "    SchedulesRequirement,\n",
+    "    SchedulesAgent,\n",
+    "    SchedGeneratorParams,\n",
+    "    Schedules,\n",
+    ")\n",
     "\n",
-    "print(len(possible_patterns))\n",
-    "pd.DataFrame([p.id for p in possible_patterns], columns=[\"pattern_id\"]).sample(\n",
-    "    50\n",
-    ").reset_index(drop=True)"
+    "from src.entities.shifts import RequirementShift, SchedulesShift, WeeklyShiftSequence\n",
+    "from src.entities.data_classes import Shift\n",
+    "\n",
+    "db_shifts = [\n",
+    "    Shift(id=\"A\", start_time=9.0, duration=9.0, task=\"task1\"),\n",
+    "    Shift(id=\"B\", start_time=12.0, duration=9.0, task=\"task1\"),\n",
+    "    Shift(id=\"C\", start_time=16.0, duration=9.0, task=\"task1\"),\n",
+    "    Shift(id=\"D\", start_time=23.0, duration=9.0, task=\"task1\"),\n",
+    "]\n",
+    "\n",
+    "req_shifts = [RequirementShift(s) for s in db_shifts]\n",
+    "\n",
+    "sched_shifts = [SchedulesShift.from_reqs_shift(s, \"work\") for s in req_shifts]\n",
+    "\n",
+    "# 2 weeks of requirement\n",
+    "values = jnp.array(\n",
+    "    [\n",
+    "        [3, 2, 2, 2, 2, 1, 1, 3, 2, 2, 2, 2, 1, 1],\n",
+    "        [4, 3, 3, 3, 3, 2, 2, 4, 3, 3, 3, 3, 2, 2],\n",
+    "        [2, 2, 2, 1, 1, 1, 1, 2, 2, 2, 1, 1, 1, 1],\n",
+    "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # unused\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "sched_reqs = SchedulesRequirement()\n",
+    "sched_reqs.shifts = req_shifts  # Shifts Tuple\n",
+    "sched_reqs.values = values  # Requirement Values\n",
+    "\n",
+    "agents = [\n",
+    "    SchedulesAgent(\"A1\", tasks=[\"task1\", \"task2\"]),\n",
+    "    SchedulesAgent(\"A2\", tasks=[\"task1\", \"task2\"]),\n",
+    "    SchedulesAgent(\"A3\", tasks=[\"task1\", \"task2\"]),\n",
+    "    SchedulesAgent(\"A4\", tasks=[\"task1\", \"task2\"]),\n",
+    "    SchedulesAgent(\"A5\", tasks=[\"task1\", \"task2\"]),\n",
+    "    SchedulesAgent(\"A6\", tasks=[\"task1\"]),\n",
+    "    SchedulesAgent(\"A7\", tasks=[\"task1\"]),\n",
+    "    SchedulesAgent(\"A8\", tasks=[\"task1\"]),\n",
+    "]\n",
+    "\n",
+    "vac = SchedulesShift.new_all_day_shift(id=\"vac\", task=\"vac\", type=\"pto\")\n",
+    "off = SchedulesShift.new_off_shift()\n",
+    "unav_16 = SchedulesShift.new_unavailable_shift(0, 16)\n",
+    "task2_9 = SchedulesShift.new_work_shift(\"Z\", 9.0, 9.0, \"task2\")\n",
+    "task1_12 = sched_shifts[1]\n",
+    "\n",
+    "availability_dict = {\n",
+    "    \"A1\": [None, None, unav_16, vac, vac, off, off],\n",
+    "    \"A2\": [task1_12, task1_12, task1_12, task1_12, task1_12, off, off],\n",
+    "    \"A3\": [off, off, None, None, None, None, None],\n",
+    "    \"A5\": [None, None, task2_9, off, None, None, None],\n",
+    "    \"A8\": [vac, vac, off, off, None, None, None],\n",
+    "}"
    ]
   },
   {
@@ -991,47 +758,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "schedules = SchedulesGenerator.setup_schedules(agents, availability_dict)\n",
+    "sched_gen = SchedulesGenerator(requirements=sched_reqs, schedules=schedules)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([1, 0], dtype=int32)"
+       "SchedulesShift(id='B', start_time=12.0, duration=9.0, task='task1')"
       ]
      },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[1, 2, 3][-1]"
+    "schedules[0].scheduled_shifts.get_weekly_shifts(0)\n",
+    "task1_12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 1, 1, 1, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0]], dtype=int32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "week = 0\n",
+    "sched_coverage = []\n",
+    "for shift in sched_reqs.shifts:\n",
+    "    sched_coverage.append(\n",
+    "        sum(\n",
+    "            [\n",
+    "                jnp.array(\n",
+    "                    sched.scheduled_shifts.get_weekly_shift_coverage(week, [shift.id])\n",
+    "                ).astype(int)\n",
+    "                for sched in schedules\n",
+    "            ]\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "jnp.array(sched_coverage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get Current Schedules Coverage\n",
+    "def get_multi_shift_weekly_coverage(\n",
+    "    schedules: Schedules, week, shifts: list[Shift]\n",
+    ") -> jnp.ndarray:\n",
+    "    coverage = []\n",
+    "\n",
+    "    for shift in shifts:\n",
+    "        coverage.append(\n",
+    "            schedules.scheduled_shifts.get_weekly_shift_coverage(week, [shift.id])\n",
+    "        )\n",
+    "\n",
+    "    return coverage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 1, 1, 1, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0]], dtype=int32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(\n",
+    "    [\n",
+    "        schedule.get_multi_shift_weekly_coverage(0, sched_shifts, from_avail=True)\n",
+    "        for schedule in schedules\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 1, 1, 1, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0]], dtype=int32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sched_gen._get_full_schedules_weekly_coverage(0)"
    ]
   }
  ],
