--- a/shifty-sands/notebooks/scheduels_generation_notebook.ipynb
+++ b/shifty-sands/notebooks/scheduels_generation_notebook.ipynb
@@ -708,16 +708,14 @@
     "# 2 weeks of requirement\n",
     "values = jnp.array(\n",
     "    [\n",
-    "        [3, 2, 2, 2, 2, 1, 1, 3, 2, 2, 2, 2, 1, 1],\n",
-    "        [4, 3, 3, 3, 3, 2, 2, 4, 3, 3, 3, 3, 2, 2],\n",
-    "        [2, 2, 2, 1, 1, 1, 1, 2, 2, 2, 1, 1, 1, 1],\n",
-    "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # unused\n",
+    "        [3, 2, 2, 2, 2, 1, 1],\n",
+    "        [4, 3, 3, 3, 3, 2, 2],\n",
+    "        [2, 2, 2, 1, 1, 1, 1],\n",
+    "        [1, 1, 1, 1, 1, 1, 1],\n",
     "    ]\n",
     ")\n",
     "\n",
-    "sched_reqs = SchedulesRequirement()\n",
-    "sched_reqs.shifts = req_shifts  # Shifts Tuple\n",
-    "sched_reqs.values = values  # Requirement Values\n",
+    "sched_reqs = SchedulesRequirement(req_shifts, values)\n",
     "\n",
     "agents = [\n",
     "    SchedulesAgent(\"A1\", tasks=[\"task1\", \"task2\"]),\n",
@@ -738,7 +736,7 @@
     "\n",
     "availability_dict = {\n",
     "    \"A1\": [None, None, unav_16, vac, vac, off, off],\n",
-    "    \"A2\": [task1_12, task1_12, task1_12, task1_12, task1_12, off, off],\n",
+    "    \"A2\": [task1_12, task1_12, task1_12, None, None, off, off],\n",
     "    \"A3\": [off, off, None, None, None, None, None],\n",
     "    \"A5\": [None, None, task2_9, off, None, None, None],\n",
     "    \"A8\": [vac, vac, off, off, None, None, None],\n",
@@ -796,7 +794,7 @@
      "data": {
       "text/plain": [
        "Array([[0, 0, 0, 0, 0, 0, 0],\n",
-       "       [1, 1, 1, 1, 1, 0, 0],\n",
+       "       [1, 1, 1, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0]], dtype=int32)"
       ]
@@ -846,53 +844,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([[0, 0, 0, 0, 0, 0, 0],\n",
-       "       [1, 1, 1, 1, 1, 0, 0],\n",
+       "Array([[1, 1, 1, 1, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0]], dtype=int32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(\n",
-    "    [\n",
-    "        schedule.get_multi_shift_weekly_coverage(0, sched_shifts, from_avail=True)\n",
-    "        for schedule in schedules\n",
-    "    ]\n",
-    ")"
+    "# Single Pattern Coverage\n",
+    "possible_patterns = sched_gen._generate_possible_patterns()\n",
+    "jnp.array(\n",
+    "    [possible_patterns[0].get_shift_coverage(shift) for shift in sched_shifts]\n",
+    ").astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([[0, 0, 0, 0, 0, 0, 0],\n",
-       "       [1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0],\n",
+       "Array([[3, 2, 2, 2, 2, 1, 1],\n",
+       "       [4, 3, 3, 3, 3, 2, 2],\n",
+       "       [2, 2, 2, 1, 1, 1, 1],\n",
        "       [0, 0, 0, 0, 0, 0, 0]], dtype=int32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sched_gen._get_full_schedules_weekly_coverage(0)"
+    "sched_gen.requirements.get_weekly_values(1)"
    ]
   }
  ],
